# Proyecto_II_Datos_II

./: README.md
Client/: BPGame.cpp  BPGame.h  Ball.cpp  Ball.h  Button.h  CMakeLists.txt  CirclesList.cpp  CirclesList.h  ClientSock.cpp  ClientSock.h  Constants.h  GUI.cpp  GUI.h  GenLists.cpp  GenLists.h  GenPuzzle.cpp  GenPuzzle.h  ImageParts.cpp  ImageParts.h  Line.cpp  Line.h  Obstacles.cpp  Obstacles.h  PhysComp.cpp  PhysComp.h  PhysController.cpp  PhysController.h  PlayerObs.cpp  PlayerObs.h  PlayersList.cpp  PlayersList.h  TextBox.cpp  TextBox.h  main.cpp
DoxyDoc/html/: _astar_8h_source.html  _b_p_game_8cpp.html  _b_p_game_8h.html  _b_p_game_8h_source.html  _backtracking_8h_source.html  _ball_8cpp.html  _ball_8h.html  _ball_8h_source.html  _button_8cpp.html  _button_8h.html  _button_8h_source.html  _client_2json_8hpp_source.html  _client_2main_8cpp.html  _client_sock_8h_source.html  _constants_8h_source.html  _facade_server_8h_source.html  _g_u_i_8cpp.html  _g_u_i_8h.html  _g_u_i_8h_source.html  _gen_puzzle_8h_source.html  _generation_8cpp.html  _generation_8h_source.html  _genetic_algorithm_8h_source.html  _lists_8h.html  _lists_8h_source.html  _matrix_8h_source.html  _node_a_star_8h_source.html  _phys_controller_8cpp.html  _phys_controller_8h.html  _phys_controller_8h_source.html  _player_obs_8cpp.html  _player_obs_8h.html  _player_obs_8h_source.html  _players_list_8h_source.html  _server_2json_8hpp_source.html  _server_socket_8cpp.html  _server_socket_8h.html  _server_socket_8h_source.html  _text_box_8cpp.html  _text_box_8h.html  (+403 more)
DoxyDoc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  (+92 more)
Server/: Astar.cpp  Astar.h  Backtracking.cpp  Backtracking.h  CMakeLists.txt  FacadeServer.cpp  FacadeServer.h  GenAlgorithm.cpp  GenAlgorithm.h  GenConstants.h  Generation.cpp  Generation.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Lists.cpp  Lists.h  Matrix.cpp  Matrix.h  NodeAStar.cpp  NodeAStar.h  ServerSocket.cpp  ServerSocket.h  XML.cpp  XML.h  main.cpp
